--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "sucrase": "^3.13.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.6"
+    "http-status-codes": "^1.4.0",
+    "mongoose": "^5.9.6",
+    "natural": "^0.6.3"
   }
 }
