--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,26 @@
     "configurations": [
         {
             "type": "node",
+            "request": "launch",
+            "name": "Mocha Tests",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "--require",
+                "sucrase/register",
+                // "-u",
+                // "tdd",
+                "--timeout",
+                "999999",
+                "--colors",              
+                "${workspaceFolder}/test/**"
+            ],
+            "internalConsoleOptions": "openOnSessionStart",
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+        {
+            "type": "node",
             "request": "attach",
             "name": "Launch Program",
             "protocol": "inspector"
