--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require sucrase/register ./test/**/*.js",
     "dev": "nodemon src/server.js",
     "build": "sucrase ./src -d ./dist --transforms imports",
     "start": "node dist/server.js",
@@ -18,7 +18,13 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/JoaoWesley/english-everywhere-backend#readme",
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^7.1.2",
     "nodemon": "^2.0.2",
+    "sinon": "^9.0.2",
+    "sinon-as-promised": "^4.0.3",
+    "sinon-mongoose": "^2.3.0",
     "sucrase": "^3.13.0"
   },
   "dependencies": {
