All upload magic, topics creation in lesson

--- a/package.json
+++ b/package.json
@@ -31,9 +31,15 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "epub": "^1.2.1",
     "express": "^4.17.1",
+    "html-to-text": "^5.1.1",
     "http-status-codes": "^1.4.0",
+    "json-size": "^1.0.0",
     "mongoose": "^5.9.6",
-    "natural": "^0.6.3"
+    "mongoose-gridfs": "^1.2.42",
+    "multer": "^1.4.2",
+    "natural": "^0.6.3",
+    "node-html-parser": "^1.2.17"
   }
 }
