--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --require sucrase/register ./test/**/*.js",
+    "test": "nyc --reporter=html --reporter=text mocha --require sucrase/register ./test/**/*.js",
     "dev": "nodemon src/server.js",
     "build": "sucrase ./src -d ./dist --transforms imports",
     "start": "node dist/server.js",
@@ -22,6 +22,7 @@
     "chai-http": "^4.3.0",
     "mocha": "^7.1.2",
     "nodemon": "^2.0.2",
+    "nyc": "^15.1.0",
     "sinon": "^9.0.2",
     "sinon-as-promised": "^4.0.3",
     "sinon-mongoose": "^2.3.0",
