--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "html-to-text": "^5.1.1",
     "http-status-codes": "^1.4.0",
     "json-size": "^1.0.0",
+    "mammoth": "^1.4.9",
     "mongoose": "^5.9.6",
     "mongoose-gridfs": "^1.2.42",
     "multer": "^1.4.2",
     "natural": "^0.6.3",
-    "node-html-parser": "^1.2.17"
+    "node-html-parser": "^1.2.17",
+    "pdf-to-text": "0.0.7"
   }
 }
