--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sucrase": "^3.13.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -38,6 +39,7 @@
     "html-to-text": "^5.1.1",
     "http-status-codes": "^1.4.0",
     "json-size": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mammoth": "^1.4.9",
     "moment": "^2.27.0",
     "mongoose": "^5.9.6",
@@ -45,6 +47,7 @@
     "multer": "^1.4.2",
     "natural": "^0.6.3",
     "node-html-parser": "^1.2.17",
+    "nodemailer": "^6.4.10",
     "pdf-to-text": "0.0.7",
     "supermemo2": "^1.1.0"
   }
