--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sucrase": "^3.13.0"
   },
   "dependencies": {
+    "@google-cloud/translate": "^6.0.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
