--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,8 @@ sw.*
 
 # Vim swap files
 *.swp
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
