--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:coverage": "nyc --reporter=html --reporter=text mocha --require sucrase/register ./test/**/*.js",
     "dev": "nodemon src/server.js",
     "build": "sucrase ./src -d ./dist --transforms imports",
-    "start": "npm run build && node dist/server.js",
+    "start": "node dist/server.js",
     "debug": "node --inspect-brk -r sucrase/register src/server.js"
   },
   "repository": {
