changing gcp configuration to to file inside project, adding logout endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # Dependency directories
 node_modules/
 
+# Google cloud files
+gcp/
 
 # Created by .ignore support plugin (hsz.mobi)
 ### Node template
